# ml-orchestration-course

./: .gitignore  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml
.github/workflows/: cd.yml  ci.yml
dags/: retrain_dag.py
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.train  nginx-mlflow.conf
frontend/: app.py
mlruns/1/36d4232a20a447d19319fb980cf28668/artifacts/: classification_report.json  classification_report.txt
mlruns/1/6dae53df0c874d509e2cb6a143700c6e/artifacts/: classification_report.txt
mlruns/1/88ac9d40d75142ba8b1531da73f7a54e/artifacts/: classification_report.txt
mlruns/1/9b9dddd33ae444f1b742652dfd2def1e/artifacts/: classification_report.json
mlruns/1/b28ae7b70a994e30b45ecdedd56b19cf/artifacts/: classification_report.json
mlruns/1/c3d4ec4e751c4206a92850895f50fab2/artifacts/: classification_report.txt
mlruns/1/cf18188cfb164ff9a416a6300e9bce80/artifacts/: classification_report.json  classification_report.txt
mlruns/1/eb18793e965641718f488088f9554451/artifacts/: classification_report.txt
scripts/: predict_client.py
src/mlproject/: api.py  config.py  data.py  evaluate.py  evaluation.py  features.py  tracking.py  train.py  train_baseline.py  train_models.py  train_optuna.py
todo/: pyproject.toml
